--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -120,13 +120,14 @@ form * {
   font-size: 2rem;
   height: 4rem;
   text-align: center;
+  
 }
 
 
 
 form > button {
   font-size: 1.6rem;
-  width: 16rem;
+  width: fit-content;
   height: 4rem;
   grid-column: 2 / 3;
   margin-bottom: 2.4rem;
